--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
-    <string name="app_name">miraclenightTest</string>
+    <string name="app_name">MiracleNight</string>
+    <string name="start_with_300"><br>300원</br>으로 시작하기</string>
+    <string-array name="notification_list">
+        <item>휴대폰은 귀로부터 30cm 떨어진 곳에 놓는것을 권장합니다</item>
+        <item>소리에 집중하기보다는 생각을 비우고 몸에 힘을 풀면 효과를 최대로 경험할 수 있습니다</item>
+    </string-array>
 </resources>
